--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next build && next start -p 8081"
+    "start": "next build && next start -p 8081",
+    "deploy": "next build && sls deploy"
   },
   "dependencies": {
-    "next": "9.3.5",
+    "express": "^4.17.1",
+    "next": "9.5.2",
     "node-fetch": "^2.6.0",
+    "path-match": "^1.2.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "serverless-apigw-binary": "^0.4.4",
+    "serverless-domain-manager": "^4.2.0",
+    "serverless-http": "^2.5.0"
+  },
+  "devDependencies": {
+    "serverless": "^1.78.1"
   }
 }
