Put a nice domain name on the application
This config requires the certificate for the domain name to exist in region us-east-1 and will create a Cloudfront distribution in front of the API and attach the domain name to that

--- a/serverless.yml
+++ b/serverless.yml
@@ -18,8 +18,15 @@ functions:
 
 plugins:
   - serverless-apigw-binary
+  - serverless-domain-manager
 
 custom:
   apigwBinary:
     types:
       - '*/*'
+  customDomain:
+    domainName: nextjs.demoapp.dev.app.york.ac.uk
+    basePath: ''
+    stage: dev
+    createRoute53Record: false
+    autoDomain: true
