Put a nice domain name on the application
This config allows the certificate for the domain name to exist in region eu-west-1 and will NOT create a Cloudfront distribution in front of the API, instead it just creates a custom "API Gateway domain name" on the API. You still need to set up a DNS CNAME entry pointing the domain name to the "API Gateway domain name" for it to fully work.

--- a/serverless.yml
+++ b/serverless.yml
@@ -18,8 +18,16 @@ functions:
 
 plugins:
   - serverless-apigw-binary
+  - serverless-domain-manager
 
 custom:
   apigwBinary:
     types:
       - '*/*'
+  customDomain:
+    domainName: nextjs.eu-west-1.demoapp.dev.app.york.ac.uk
+    basePath: ''
+    stage: dev
+    createRoute53Record: false
+    autoDomain: true
+    endpointType: regional
