--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "serverless-apigw-binary": "^0.4.4",
-    "serverless-domain-manager": "^4.2.0",
     "serverless-http": "^2.5.0"
   },
   "devDependencies": {
-    "serverless": "^1.78.1"
+    "serverless": "^1.78.1",
+    "serverless-pseudo-parameters": "^2.5.0"
   }
 }
