Enable compression of API Gateway responses
This might make page loading faster as there will be fewer bytes for the client to download

--- a/serverless.yml
+++ b/serverless.yml
@@ -6,6 +6,8 @@ provider:
   stage: dev
   region: eu-west-1
   memorySize: 512
+  apiGateway:
+    minimumCompressionSize: 1024
   environment:
     NODE_ENV: production
 
