--- a/serverless.yml
+++ b/serverless.yml
@@ -81,6 +81,7 @@ resources:
 
 package:
   exclude:
+    - .idea/**
     - node_modules/@babel/**
     - node_modules/ally.js/**
     - node_modules/caniuse-lite/**
