Add CloudFront distribution in front of application's API

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "serverless": "^1.78.1",
+    "serverless-api-cloudfront": "^0.9.5",
     "serverless-pseudo-parameters": "^2.5.0"
   }
 }
